--- a/assets/src/scss/_5_layout/_page-top.scss
+++ b/assets/src/scss/_5_layout/_page-top.scss
@@ -1,10 +1,13 @@
 body {
-    margin: 80px 150px 100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 30px 20px;
     @include body-copy;
 
+    @include breakpoint(large) {
+        margin: 80px 150px 100px;
+    }
 
 
     header {
@@ -12,24 +15,82 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
 
+        .nav {
+            display: none;
 
+            @include breakpoint(large) {
+                display: block;
+            }
 
-        nav ul {
-            display: inline-flex;
-            flex-direction: row;
-
-            li {
-                display: flex;
+            & ul {
+                display: inline-flex;
                 flex-direction: row;
-                justify-content: space-between;
-                padding: 0px 0px 0px 60px;
-                color: $Dark-grayish-blue;
-                font-family: Helvetica, Arial, sans-serif;
-                font-size: 16px;
-                color: $Grayish-blue;
+
+                li {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    padding: 0px 0px 0px 60px;
+                    font-family: Helvetica, Arial, sans-serif;
+                    font-size: 16px;
+                    color: $Grayish-blue;
+                }
+            }
+
+        }
+
+        #hamburger {
+
+            @include breakpoint(large) {
+                display: none;
+            }
+        }
+
+        #mobile-nav {
+
+
+            nav {
+
+                margin-top: 75px;
+                margin-left: -15px;
+
+                & ul li {
+                    list-style: none;
+                    padding-bottom: 15px;
+                    font-size: 20px;
+                }
+            }
+
+            &.close {
+                display:none;
+            }
+
+            &.open {
+                z-index: 9999;
+                position: absolute;
+                top: 0;
+                right: 0;
+                display: flex;
+                flex-direction: column;
+                background: $Off-white;
+                height: 100vh;
+                width: 65vw;
+
+                @include breakpoint(large) {
+                    display: none;
+                }
             }
         }
 
     }
+
+    #close-nav {
+        height: 30px;
+        width: 30px;
+        align-self: end;
+        margin: 15px;
+    }
+
 }
