--- a/assets/src/scss/_7_pages/_index.scss
+++ b/assets/src/scss/_7_pages/_index.scss
@@ -1,42 +1,74 @@
 .main {
     display: flex;
+    flex-direction: column;
+    @include breakpoint(large) {
     flex-direction: row;
     
+    }
     &--content {
+
         flex-grow: 2;
         display: flex;
         flex-direction:column;
+        margin-top: 30px;
+
+        @include breakpoint(large) {
         margin: 50px 30px 15px 0;
         width: 1150px;
+        }
 
         &_image {
-            height: 350px;
-            background-image: url("../../images/image-web-3-desktop.jpg");
+            width: 340px;
+            height: 300px;
+            background-image: url('../../images/image-web-3-mobile.jpg');
             background-size: cover;
-            background-repeat: none;
+            background-repeat:none;
+
+            @include breakpoint(large) {
+            height: 350px;
+            width: 820px;
+            background-image: url("../../images/image-web-3-desktop.jpg");
+            }
         }
 
         &_text {
+            
+
+            @include breakpoint(large) {
             display: flex;
             flex-direction:row;
+            column-gap: 30px;
+            }
 
             h1 {
                 @include inter-extra;
-                font-size: 60px;
                 color: $Very-dark-blue;
+                font-size: 48px;
+                margin-bottom: 0;
+
+                @include breakpoint(large) {
+                @include h1;
                 flex-grow: 2;
-                justify-content: space-between;
+                margin-top: 25px;
+                }
                 
             }
 
             div {
                 flex-grow: 1;
-                margin-top: 45px;
-                margin-right: 20px;
-                margin-left: 75px;
+
+                @include breakpoint(large) {
+                margin-top: 20px;
+                margin-left: 55px;
+                }
+
                 p {
                     line-height: 2;
-                    // margin-bottom: 55px;
+                    margin-bottom: 20px;
+
+                    @include breakpoint(large) {
+                    margin-bottom: 60px;
+                    }
                 }
 
                 button {
@@ -54,12 +86,15 @@
     }
 
     &--new {
-        margin: 50px 0px 80px;
+        margin: 60px -2px 25px;
         padding: 0px 25px;
         flex-grow: 1;
         background-color: black;
-        color: $Off-white;
         line-height: 1.5;
+
+        @include breakpoint(large) {
+            margin-top: 50px;
+        }
 
         hr {
             border-top: 1px solid $Grayish-blue;
@@ -67,14 +102,25 @@
 
         h2 {
             color: $soft-orange;
-            @include inter-bold;
-            font-size: 2.75em;
+            @include h2;
+
+            @include breakpoint(large){
+                font-size: 2.5em;
+            }
         }
 
         h4 {
-            @include inter-bold;
-            font-size: 1.5em;
+            @include h4;
             margin-bottom: 0;
+            color: $Off-white;
+
+            @include breakpoint(large) {
+                font-size: 1.5em
+            }
+        }
+
+        p {
+            color: $Grayish-blue;
         }
 
     }
@@ -82,16 +128,52 @@
 
 .featured {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     height: 150px;
+    margin-bottom: 50px;
+    row-gap: 40px;
+
+    @include breakpoint(large) {
+        flex-direction: row;
+        margin-top: 60px;
+        justify-content: space-between;
+    }
 
     div {
         display: flex;
         flex-direction: row;
 
+        column-gap: 20px;
+
+        img {
+            height: 150px;
+        }
+        @include breakpoint(large) {
+            max-width: 350px;
+        }
+
         div {
             display: flex;
             flex-direction: column;
+
+
+            h2, h4 {
+                margin: 0 0 15px;
+            }
+
+            h2 {
+                @include h2;
+                color: $Grayish-blue;
+            }
+
+            h4 {
+                @include h4;
+                color: $Dark-grayish-blue;
+
+                @include breakpoint(large) {
+                    font-size: 1.2em;
+                }
+            }
         }
 
     }
