updated letter spacing on button and color for nav

--- a/assets/src/scss/_7_pages/_index.scss
+++ b/assets/src/scss/_7_pages/_index.scss
@@ -80,6 +80,7 @@
                     text-transform: uppercase;
                     font-family: $inter;
                     font-stretch: expanded;
+                    letter-spacing: 6px;
                 }
             }
         }
