--- a/assets/src/scss/_5_layout/_page-top.scss
+++ b/assets/src/scss/_5_layout/_page-top.scss
@@ -35,7 +35,7 @@ body {
                     padding: 0px 0px 0px 60px;
                     font-family: Helvetica, Arial, sans-serif;
                     font-size: 16px;
-                    color: $Grayish-blue;
+                    color: $Dark-grayish-blue;
                 }
             }
 
