--- a/assets/src/scss/_5_layout/_page-top.scss
+++ b/assets/src/scss/_5_layout/_page-top.scss
@@ -36,6 +36,10 @@ body {
                     font-family: Helvetica, Arial, sans-serif;
                     font-size: 16px;
                     color: $Dark-grayish-blue;
+
+                    &:hover {
+                        color: $soft-red;
+                    }
                 }
             }
 
